# 2025-p1-aadityayadav17

./: README.md  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
