[project]
name = "2025-p1-aadityayadav17"
version = "0.1.0"
description = ""
authors = [
    {name = "aadityayadav17",email = "yadavaadi17@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
